
Documentation
======================
* Add missing docs for "timeout" attributes on Maven and Maven2 builders.
* Fix old reference to launch via cruisecontrol.jar (replace with cruisecontrol-launcher.jar) in gettingstartedsroucedist.html. Reported by Xeno Campanoli
* Add documentation for the Rake Builder (which has existed for some time, but had no docs).

reporting
======================
* Fix "Building (since)" time on build summary page to show start of build time (instead of last progress message update time). (CC-740) Fix suggested by EJ Ciramella.
* Show progress message as tooltip over Status cells on build summary page while building. Also show time until next build while waiting.
* Added AbstractXslOutputWidget to support writing widgets for arbitrary XSL.  Also provide AntOutputWidget that shows Ant output. (CC-718) Submitted by Ketan Padegaonkar.

Dashboard
======================
* Have dashboard update its status from HTTP posts from build loop
* Show build queued status on dashboard
* Display paused and un-paused build status
* Update tooltips on dashboard to display full information on build status (queued builds, paused builds etc).
* Display discontinued project status
* Create dashboard widget API and change "dashboards" and "builds" tabs to use it
* remove description text in modification tab and replace with icons
* See build information from zipped log files
* Split "dashboard" and "builds" tabs and refactored CSS.
* Force build, RSS & JMX console links should be available on the build detail page
* See errors and warnings in an expandable, collapsible list
* Include last build status on RSS feed
* Make dashboard work in IE6 and IE7
* Better time reporting
* Installation diagnosis widget
* Made dashboard accept single quotes in a project name.
* Made "all builds", "all successful builds", "config panel" and "force build" buttons turn grey when project is inactive.
* Specify location of dashboard via command line

